@@ -15,6 +15,8 @@ Version 1.9.9+svn:
  * Editor:
    * Made sure lighting setting changes are applied immediately when closing the
      settings window when automatic map view updates are disabled
+   * Starting position tool menu now displays coordinates of existing positions,
+     and initially highlights the current player number assigned to the selected hex
  * Graphics:
    * New Animations:
      * Goblin spearman run se
